Replace Guava precondition checks with Objects::requireNonNull
- intrinsics are used for the latter