@@ -251,10 +251,20 @@ subprojects {
                  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
                  "--add-opens=java.base/java.io=ALL-UNNAMED",
                  "--add-opens=java.base/java.util=ALL-UNNAMED",
-                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"])
+                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                // "-XX:+UseZGC",
+                 "-XX:+UnlockExperimentalVMOptions",
+                 "-XX:+AlwaysPreTouch",
+                 "-XX:+UseLargePages",
+                 "-XX:+DisableExplicitGC",
+                 "-XX:ReservedCodeCacheSize=1000m",
+                 "-XX:+UnlockDiagnosticVMOptions",
+               //  "-XX:+PrintInlining",
+                 "-XX:EliminateAllocationArraySizeLimit=1024",
+                /* "-XX:MaxInlineSize=500" */])
 
-        minHeapSize = '2g'
-        maxHeapSize = '7g'
+        minHeapSize = '5g'
+        maxHeapSize = '5g'
     }
 }
 
